// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File row header component adds multiple ellipsises after 40 characters 1`] = `
<div
  class="file-row-header bg-white sticky-top p-2 js-file-row-header"
  title="app/assets/javascripts/merge_requests/widget/diffs/notes"
>
  <span
    class="bold"
  >
    app/assets/javascripts/…/…/diffs/notes
  </span>
</div>
`;

exports[`File row header component renders file path 1`] = `
<div
  class="file-row-header bg-white sticky-top p-2 js-file-row-header"
  title="app/assets"
>
  <span
    class="bold"
  >
    app/assets
  </span>
</div>
`;

exports[`File row header component trucates path after 40 characters 1`] = `
<div
  class="file-row-header bg-white sticky-top p-2 js-file-row-header"
  title="app/assets/javascripts/merge_requests"
>
  <span
    class="bold"
  >
    app/assets/javascripts/merge_requests
  </span>
</div>
`;
